Criando lógica de buscar registros e manter os índices atualizados e melhorando armazenamento de facetas
